<resources>
    <string name="app_name">What2Eat</string>

    <!-- activity-login -->
    <string name="connexion">Se connecter</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="forgot_password">Mot de passe oublié</string>
    <string name="go_register">Toujours pas de compte ? Inscrivez-vous</string>
    <string name="id_mdp_error">Identifiant ou mot de passe incorrect</string>

    <!-- activity-register -->
    <string name="inscription">S\'inscrire</string>
    <string name="go_login">Vous avez déjà un compte ? Connectez-vous !</string>
    <string name="Nom">Nom</string>
    <string name="name">Prénom</string>
    <string name="password_confirm">Confirmation du mot de passe</string>

    <!-- activity-forgot-password -->
    <string name="reset_password">Réinitialiser mon mot de passe</string>
    <string name="new_pass">Nouveau mot de passe</string>
    <string name="reset">Réinitialiser</string>

    <!-- activity-frigo -->
    <string name="frigo_title">Mon frigo</string>
    <string name="cuisine_title">Dans ma cuisine, il y a…</string>

    <!-- errors -->
    <string name="error_get_ingredients">Une erreur s\'est produite lors de la récuperation de votre Frigo.</string>
    <string name="error_add_ingredient">Une erreur s\'est produite lors l\'ajout de l\'ingredient.</string>
    <string name="error_saisie">Erreur de Saisie (A-z 0-9)</string>
    
    <!-- scanner-result-dialog-fragment  -->
    <string name="dialog_title">Produit trouvé !</string>
    <string name="dialog_title_error">Produit introuvable</string>
    <string name="dialog_title_error_message">Désolé, nous n\'avons pas été en mesure de trouver ce produit. Vous pouvez réessayer de scanner le produit ou alors l\'ajouter manuellement.</string>
    <string name="dialog_error_cancel">Annuler</string>
    <string name="dialog_error_retry">Réessayer</string>
    <string name="dialog_error_dismiss">Retour</string>
    <string name="dialog_error_add">Ajouter manuellement</string>
    <string name="dialog_add">Ajouter à mes ingredients</string>

    <!-- activity-profil -->
    <string name="succes_modif_profil">Changements Réussies</string>
    <string name="error_modif_profil">Nous n\'avons pas pus changer vos informations</string>
</resources>