<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70sp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/inscription"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="10sp"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="text"
                android:padding="10sp"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10sp"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10sp"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/editTextPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:padding="10sp"
                android:textColorHint="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/inscription" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:text="@string/go_login" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>