<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_blue_1"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70sp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/reset_password"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/new_pass"
                android:inputType="textPassword"
                android:padding="10sp"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/editTextNewPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:padding="10sp"
                android:textColorHint="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="80sp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/mLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/reset" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>